--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
         <junit.version>5.9.2</junit.version>
     </properties>
 
+    <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+        </resources>
+    </build>
+
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
